--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-EMAIL_PASSWORD="vmzw sblz rats lkdi"
+
+FIREBASE_API_KEY = "AIzaSyBcORtCnca_o90J4skz8qq4vaEuf4VdLbM",
+FIREBASE_AUTH_DOMAIN = "soil-scan-system.firebaseapp.com",
+FIREBASE_PROJECT_ID = "soil-scan-system",
+FIREBASE_STORAGE_BUCKET = "soil-scan-system.appspot.com",
+FIREBASE_MESSAGING_SENDER_ID = "871665361075",
+FIREBASE_APP_ID = "1:871665361075:web:5984d83137bbbdb9c2d0c6",
+FIREBASE_MEASUREMENT_ID = "G-3RHFDD7KZF",
+FIREBASE_DATABASE_URL = "https://soil-scan-system-default-rtdb.firebaseio.com/"
